Calendar: correctly uninstall scrollbars
If scrollbars are not uninstalled, they create a memory leak.
Also, the shadow won't be removed which is especially visible when
switching between month and week view.

312255

--- a/eclipse-scout-core/src/calendar/Calendar.less
+++ b/eclipse-scout-core/src/calendar/Calendar.less
@@ -28,15 +28,6 @@
   height: 100%;
 }
 
-.calendar-week-scrollable {
-  overflow: visible;
-}
-
-.calendar-scrollable-components-week {
-  top: calc(@calendar-day-selected-circle-size ~'+ 5px');
-  height: calc(~'15% - (' @calendar-day-selected-circle-size ~' + 5px)');
-}
-
 .calendar-header {
   position: relative;
   display: block;
